--- a/Me.html
+++ b/Me.html
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <li><img class="mainlogo" src="Logo.png" alt="Logo"></li>
-                <li class="main-site"><a href="site.html" >Born Productions</a></li>
+                <li class="main-site"><a href="index.html" >Born Productions</a></li>
 
                 <li class="menu-trigger-el">
                     <a href="#">About</a>
