--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav>
         <ul>
             <li><img class="mainlogo" src="Logo.png" alt="Logo"></li>
-            <li class="main-site"><a>Born Productions</a></li>
+            <li class="main-site"><a href="#">Born Productions</a></li>
             <li class="menu-trigger-el">
                 <a href="#">About</a>
                 <ul class="nested-menu">
