--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ A w pierwszym rzędzie powinny usiąść tylko odważne dusze i przyszli aktorzy
     
 </footer>
     <section class="copyright">
-        <p>&copy; Copyright 2025 Born Productions. Wszelkie prawa zastrzeżone</p>
+        <p>&copy; Copyright BornProductions. Work with github.com </p>
         
     </section> 
 
