--- a/Productions.html
+++ b/Productions.html
@@ -12,7 +12,7 @@
     <header>
     <nav>
         <ul>
-            <li><img class="mainlogo" src="Logo.png" alt="Logo"></li>
+            <li><img class="mainlogo" src="logo.png" alt="Logo"></li>
             <li class="main-site"><a href="index.html">Born Productions</a></li>
             <li class="menu-trigger-el">
                 <a href="#">About</a>
