--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
     <nav>
         <ul>
-            <li><img class="mainlogo" src="Logo.png" alt="Logo"></li>
+            <li><img class="mainlogo" src="logo.png" alt="Logo"></li>
             <li class="main-site"><a href="site.html">Born Productions</a></li>
             <li class="menu-trigger-el">
                 <a href="#">About</a>
