--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Born Productions</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
-    <link rel="icon" href="Logo.png">
+    <link rel="icon" href="logo.png">
     <link rel="stylesheet" href="s.css">
     <link rel="stylesheet" href="nav.css">
     <script type="text/javascript" src="app.js"></script>
